# amcs-app

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: index.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/archive/: task1.rs  task1_commands.rs  task1_concrete.rs  task4_commands.rs  task4_concrete.rs
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  task6.rs  task6_commands.rs  task6_concrete.rs
src-tauri/src/archive/: archive_task6.rs  archive_task6_parallel5.rs
src-tauri/src/task6/: backtrace.rs  elliptic_equation.rs  equations.rs
src/archive/: archive.html  archive.ts
