[package]
name = "amcs-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["paranormalKrono"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amcs_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.4", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.130"

peroxide = "0.37.9"
anyhow = "1.0.90"
thiserror = "1.0.64"
csv = "1.3.0"
meval = "0.2.0"

[profile.release]
opt-level = "z"

[build]
rustflags = ["-Z", "threads=8"]
